<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.antwerkz</groupId>
    <artifactId>antwerkz-parent</artifactId>
    <version>6</version>
  </parent>

  <groupId>com.antwerkz.maven</groupId>
  <artifactId>obsoleter</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>maven-plugin</packaging>

  <name>obsoleter</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>
  <description>Hides obsolete methods from javac</description>
  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Justin Lee</name>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.maven.plugin-tools</groupId>
      <artifactId>maven-plugin-annotations</artifactId>
      <version>3.9.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-plugin-api</artifactId>
      <version>3.9.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.5</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>9.5</version>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.8.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>3.9.0</version>
        </plugin>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>jreleaser</id>
      <activation>
        <property>
          <name>release</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jreleaser</groupId>
            <artifactId>jreleaser-maven-plugin</artifactId>
            <version>1.7.0</version>
            <configuration>
              <jreleaser>
                <signing>
                  <active>ALWAYS</active>
                  <armored>true</armored>
                </signing>
                <deploy>
                  <maven>
                    <nexus2>
                      <maven-central>
                        <active>ALWAYS</active>
                        <url>https://oss.sonatype.org/service/local</url>
                        <snapshotUrl>https://oss.sonatype.org/content/repositories/snapshots/</snapshotUrl>
                        <closeRepository>true</closeRepository>
                        <releaseRepository>false</releaseRepository>
                        <stagingRepositories>target/localRepo/snapshot</stagingRepositories>
                      </maven-central>
                    </nexus2>
                  </maven>
                </deploy>
                  <release>
                    <github>
                      <changelog>
                        <links>true</links>
                        <formatted>ALWAYS</formatted>
                        <preset>gitmoji</preset>
                        <contributorsTitleFormat>### Contributors'</contributorsTitleFormat>
                        <append>
                          <enabled>true</enabled>
                        </append>
                        <contributors>
                          <format>- {{contributorName}} ({{contributorUsernameAsLink}})</format>
                        </contributors>

                        <hide>
                          <uncategorized>true</uncategorized>
                          <contributors>
                            <contributor>[bot]</contributor>
                          </contributors>
                        </hide>

                        <includeLabels>
                          <includeLabel>issue</includeLabel>
                        </includeLabels>

                        <categories>
                          <category>
                            <title>🚀 Features</title>
                            <key>features</key>
                            <labels>feature,enhancement</labels>
                            <order>1</order>
                          </category>
                          <category>
                            <title>🐛 Bug Fixes</title>
                            <key>fixes</key>
                            <format>- {{commitShortHash}} {{commitBody}}</format>
                            <labels>bug,fix</labels>
                            <order>2</order>
                          </category>
                        </categories>
                      </changelog>
                    </github>
                  </release>
              </jreleaser>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
